# rustaccio

./: .dockerignore  .env.example  .env.local.example  .env.managed.example  .env.s3.example  .gitignore  .lefthook.yml  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  config.example.yml  docker-compose.governance.yml  docker-compose.minio.yml  justfile
.github/workflows/: ci.yml  docker-publish.yml
.rustaccio-data/: state.json
docs/: oss-plus-saas-control-plane-spec.md  oss-saas-implementation-backlog.md
docs/contracts/: auth-request-v1.md  error-taxonomy-v1.md  npm-bootstrap-v1.md  policy-decision-v1.md  registry-events-v1.md
migrations/: 0001_quota_usage_table.sql
src/: acl.rs  api.rs  app.rs  auth.rs  auth_plugin.rs  config.rs  constants.rs  error.rs  events.rs  examples.rs  governance.rs  lib.rs  main.rs  models.rs  observability.rs  policy.rs  runtime.rs  startup_checks.rs  state_coordination.rs  storage.rs  tarball_backend.rs  upstream.rs  web_ui.rs
tests/: api_runtime_controls.rs  config.rs  embedded_auth.rs  examples_sync.rs  file_length.rs  governance_controls.rs  governance_redis_postgres_integration.rs  parity.rs  policy_http.rs  s3_minio_integration.rs  sidecar_authority.rs  state_coordination_redis_integration.rs  state_coordination_s3_integration.rs
webui/: app.js  index.html  styles.css
