[package]
name = "rustaccio"
version = "0.3.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[features]
default = []
s3 = ["dep:aws-config", "dep:aws-sdk-s3", "dep:aws-smithy-http-client"]

[dependencies]
argon2 = "0.5.3"
async-trait = "0.1.89"
aws-config = { version = "1.8.14", optional = true }
aws-sdk-s3 = { version = "1.123.0", optional = true }
aws-smithy-http-client = { version = "1.1.10", optional = true, default-features = false, features = ["rustls-aws-lc"] }
axum = { version = "0.7.9", default-features = false, features = ["http1", "tokio", "json"] }
base64 = "0.22.1"
chrono = { version = "0.4.43", features = ["clock"] }
config = { version = "0.15.11", default-features = false, features = ["yaml"] }
hex = "0.4.3"
password-hash = "0.5.0"
rand = "0.8.5"
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["fs", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tower-http = { version = "0.6.8", default-features = false, features = ["request-id", "trace", "limit", "timeout"] }
tracing = "0.1.44"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt", "json"] }
urlencoding = "2.1.3"
uuid = { version = "1.20.0", features = ["serde", "v4"] }

[dev-dependencies]
flate2 = "1.1.5"
http-body-util = "0.1.3"
tar = "0.4.44"
tower = { version = "0.5.3", features = ["util"] }
tempfile = "3.25.0"
wiremock = "0.6.5"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 16
strip = "symbols"
panic = "abort"
debug = 0
incremental = true

[profile.dist]
inherits = "release"
lto = "fat"
codegen-units = 1
incremental = false
