[package]
name = "rustaccio"
version = "0.4.0"
edition = "2024"
license = "MIT OR Apache-2.0"
default-run = "rustaccio"

[features]
default = []
s3 = ["dep:aws-config", "dep:aws-sdk-s3", "dep:aws-smithy-http-client"]
redis = ["dep:redis"]
postgres = ["dep:tokio-postgres"]
otel = [
  "dep:opentelemetry",
  "dep:opentelemetry-otlp",
  "dep:opentelemetry_sdk",
  "dep:tracing-opentelemetry",
]

[dependencies]
argon2 = "0.5.3"
async-trait = "0.1.89"
aws-config = { version = "1.8.14", optional = true }
aws-sdk-s3 = { version = "1.123.0", optional = true }
aws-smithy-http-client = { version = "1.1.10", optional = true, default-features = false, features = ["rustls-aws-lc"] }
axum = { version = "0.7.9", default-features = false, features = ["http1", "tokio", "json"] }
base64 = "0.22.1"
chrono = { version = "0.4.43", features = ["clock"] }
config = { version = "0.15.11", default-features = false, features = ["yaml"] }
hex = "0.4.3"
hyper = { version = "1.8.0", default-features = false, features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1.19", features = ["server-auto", "service", "tokio", "http1", "http2"] }
password-hash = "0.5.0"
rand = "0.8.5"
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls"] }
redis = { version = "0.27.6", optional = true, default-features = false, features = ["tokio-comp", "script"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
serde_yaml = "0.9.34"
sha2 = "0.10.9"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["fs", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-postgres = { version = "0.7.12", optional = true }
tower-http = { version = "0.6.8", default-features = false, features = ["request-id", "trace", "limit", "timeout"] }
tower = { version = "0.5.3", features = ["util"] }
tracing = "0.1.44"
tracing-error = "0.2.1"
tracing-opentelemetry = { version = "0.29.0", optional = true }
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt", "json"] }
urlencoding = "2.1.3"
uuid = { version = "1.20.0", features = ["serde", "v4"] }
opentelemetry = { version = "0.28.0", optional = true }
opentelemetry-otlp = { version = "0.28.0", optional = true, features = ["http-proto", "reqwest-client"] }
opentelemetry_sdk = { version = "0.28.0", optional = true, features = ["rt-tokio"] }

[dev-dependencies]
flate2 = "1.1.5"
http-body-util = "0.1.3"
tar = "0.4.44"
tempfile = "3.25.0"
wiremock = "0.6.5"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 16
strip = "symbols"
panic = "abort"
debug = 0
incremental = true

[profile.dist]
inherits = "release"
lto = "fat"
codegen-units = 1
incremental = false
